Bug 475579 - Monitor visualization is too narrow on a vertical screen
Summary: Monitor visualization is too narrow on a vertical screen
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_kwinscreenedges (other bugs)
Version First Reported In: 5.27.8
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-10-13 18:50 UTC by ratijas
Modified: 2023-10-19 07:05 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
4K vertical screen (77.66 KB, image/png)
2023-10-13 18:50 UTC, ratijas
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ratijas 2023-10-13 18:50:18 UTC
Created attachment 162282 [details]
4K vertical screen

SUMMARY

There should be some limit for width/height ratio of this widget. On my vertical 4K screen it becomes unusably narrow, buttons partially overlap horizontally.

STEPS TO REPRODUCE
1. Get a 3840x2160 px monitor, rotate it in any portrait mode.
2. Open Screen Edges KCM, drag window to that monitor.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.240.0
Qt Version: 6.6.0
Kernel Version: 6.5.7-arch1-1 (64-bit)
Graphics Platform: X11
Comment 1 Nate Graham 2023-10-13 19:58:40 UTC
lol
Comment 2 Nate Graham 2023-10-13 20:44:59 UTC
bot, you are drunk
Comment 3 ratijas 2023-10-14 21:59:17 UTC
> bot, you are drunk

I tried it before. The bot will force-set qt6 keyword again and again anyway, so I guess it needs to be fixed.
Comment 4 Bug Janitor Service 2023-10-18 11:10:36 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/4522
Comment 5 ratijas 2023-10-18 15:20:51 UTC
Git commit 264b054c5c580bd2bbe878d1c46ca4340d3f35df by ivan tkachenko.
Committed on 18/10/2023 at 17:11.
Pushed by ratijas into branch 'master'.

kcms/screenedges: Fix buttons overlap on a too narrow vertical screen

M  +1    -0    src/kcms/screenedges/monitor.cpp
M  +18   -0    src/kcms/screenedges/screenpreviewwidget.cpp
M  +4    -0    src/kcms/screenedges/screenpreviewwidget.h

https://invent.kde.org/plasma/kwin/-/commit/264b054c5c580bd2bbe878d1c46ca4340d3f35df
Comment 6 ratijas 2023-10-19 07:05:47 UTC
Git commit 7b656635815696bcff0602114a39661cbc8ef2a9 by ivan tkachenko.
Committed on 18/10/2023 at 17:23.
Pushed by vladz into branch 'Plasma/5.27'.

kcms/screenedges: Fix buttons overlap on a too narrow vertical screen
(cherry picked from commit 264b054c5c580bd2bbe878d1c46ca4340d3f35df)

M  +1    -0    src/kcms/screenedges/monitor.cpp
M  +18   -0    src/kcms/screenedges/screenpreviewwidget.cpp
M  +4    -0    src/kcms/screenedges/screenpreviewwidget.h

https://invent.kde.org/plasma/kwin/-/commit/7b656635815696bcff0602114a39661cbc8ef2a9