fix: fix buttons overlap on a too narrow vertical screen

BUG: 475579